add account activation endpoint
